--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Accueil"
+            android:label="@string/title_activity_accueil" >
+        </activity>
+        <activity
+            android:name=".ModeSolo"
+            android:label="@string/title_activity_mode_solo" >
+        </activity>
+        <activity
+            android:name=".ModeMultijoueur"
+            android:label="@string/title_activity_mode_multijoueur" >
+        </activity>
+        <activity
+            android:name=".Regles"
+            android:label="@string/title_activity_regles" >
+        </activity>
     </application>
 
 </manifest>
